# ClaimPKG

./: .gitignore  README.md  example.env  pyproject.toml  requirements.txt
axolotl_config/: specialized_llm_3b_llama.yaml  specialized_llm_3b_qwen.yaml  train.sh  zero3.json  zero3_bf16_cpuoffload_params.json
scripts/: annotate_in_out_entities.sh  annotate_reverse_relation.sh  initial_processing_factkg.sh  process_convert_kg_to_nx_kg.sh  process_convert_kg_to_trie.sh  process_convert_sample_to_graph_training_format.sh  workflow_generate_pseudo_subgraphs.sh  workflow_retrieve_subgraphs.sh  z_gen_configs_pseudo_subgraphs.ipynb  z_gen_configs_reasoning.ipynb  z_gen_configs_retrieved_subgraphs.ipynb
scripts/reasoning/: reasoning.sh  reasoning_dev_different_retrieval_params.sh  reasoning_different_beam_size_dev.sh  reasoning_different_model_size_dev.sh  reasoning_different_model_size_qwen.sh  reasoning_different_sample_size_qwen.sh  reasoning_llama_8b.sh  reasoning_qwen_72b.sh  reasoning_qwen_7b.sh  reasoning_qwen_dev.sh  reasoning_without_constraint.sh
scripts/reasoning_different_scoring_methods/: reasoning_different_scoring_methods.sh
scripts/reasoning_fewshots/: reasoning_fewshots.sh
scripts/reasoning_runtime/: reasoning_different_beam_size_runtime_dev.sh
scripts/reasoning_without_disambiguation/: reasoning.sh
scripts/retrieve_subgraphs/: specialized_llm_1b_base_100_checkpoint-100.sh  specialized_llm_1b_base_2000_checkpoint-125.sh  (+10 more)
src/: __init__.py  evaluator.py  retrieval_algorithm.py  retrieval_algorithm_without_disambiguation.py
src/prompts/: __init__.py  (+3 more)
(+226 files in other folders)
