[tool.poetry]
name = "graph-checking"
version = "0.1.0"
description = ""
authors = ["Phạm Hoàng <hoang1482002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.54.4"
python-dotenv = "^1.0.1"
tenacity = "^9.0.0"
datasets = "^3.1.0"
pytest = "^8.3.4"
transformers = "4.46.1"
torch = "^2.5.1"
sentence-transformers = "^3.3.1"
tqdm = "^4.67.1"
accelerate = "^1.2.1"
ipywidgets = "^8.1.5"
fuzzywuzzy = "^0.18.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
python-levenshtein = "^0.26.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
